# pypi-package-uv-template

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: api.md  index.md
src/pypi_package_uv_template/: __init__.py  __main__.py  main.py
tests/: test_main.py
